classDiagram
    %% --- Entity Classes ---
    class User {
        +user ID
        +password
        +login
        +logout
    }

    class Admin {
        +manage movies
        +manage users
        +manage promotions
        +manage ticket prices
    }

    class Customer {
        +first name
        +last name
        +email
        +make booking
        +manage payment cards
    }

    class PaymentCard {
        +card number
        +billing address
        +expiration date
        +save card
        +remove card
    }

    class Movie {
        +movie ID
        +title
        +genre
        +duration
        +get details
        +find showtimes
    }

    class Cinema {
        +name
        +location
        +get showrooms
        +get now showing
    }

    class Showroom {
        +showroom ID
        +capacity
        +get seats
        +schedule show
    }

    class Show {
        +show ID
        +date and time
        +duration
        +check availability
        +get show info
    }

    class Booking {
        +booking ID
        +booking date
        +total price
        +add ticket
        +apply promotion
    }

    class Ticket {
        +ticket ID
        +seat number
        +price
        +get ticket details
        +validate ticket
    }

    class Promotion {
        +promo code
        +discount percentage
        +expiration date
        +apply discount
        +validate code
    }


    %% --- Enumerations ---
    class CustomerState {
        <<enumeration>>
        Active
        Inactive
        Suspended
    }

    class TicketType {
        <<enumeration>>
        Adult
        Senior
        Child
    }


    %% --- Relationships & Multiplicities ---
    
    %% Inheritance for User types
    User <|-- Admin
    User <|-- Customer

    %% Associations for Customer
    Customer "1" -- "0..3" PaymentCard : stores
    Customer "1" -- "0..*" Booking : has
    Customer "1" -- "1" CustomerState : state

    %% Associations for Cinema/Show
    Cinema "1" *-- "1..*" Showroom : contains
    Showroom "1" -- "0..*" Show : schedules
    Movie "1" -- "1..*" Show : shows
    
    %% Associations for Booking/Ticket/Promotion
    Booking "1" -- "0..1" Promotion : applies
    Booking "1" *-- "1..*" Ticket : contains
    Ticket -- TicketType : type
    Booking -- Show : many
    
    %% Promotion associations (separated to avoid crossing)
